<resources>
    <string name="app_name">Project3Tracker</string>
    <string name="log_in">Log in</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="this_is_a_simple_item">This is a simple item!</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Task description</string>
    <string name="task_priority">Task priority:</string>
    <string name="owner_s_profile_picture">Owner\'s profile picture</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="tasks">Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="profile">Profile settings</string>
    <string name="phone">Phone</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="location">Location</string>
    <string name="image_url">Image URL</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="assigned_to_userid">Assigned to (UserID)</string>
    <string name="department_id">Department ID:</string>
    <string name="created_time">Created on:</string>
    <string name="created_by">Created by:</string>
    <string name="deadline">Deadline:</string>
    <string name="assigned_to">Assigned to:</string>
    <string name="status">Status:</string>
    <string name="details">Details</string>
    <string name="ok">OK</string>
    <string name="department">Department</string>
    <string name="departments">Departments</string>
    <string name="department_members">Department members</string>
    <string name="log_out">log Out</string>
</resources>