<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <EditText
        android:id="@+id/editTextTextTaskTitle"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textColorHint="#1A237E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextTaskDescription"
        android:layout_width="385dp"
        android:layout_height="75dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textColorHint="#1A237E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextTaskTitle"
        tools:ignore="LabelFor" />

    <DatePicker
        android:id="@+id/datePickerDeadline"
        android:layout_width="250dp"
        android:layout_height="170dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="10dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextTaskDescription" />

    <Spinner
        android:id="@+id/spinnerPriority"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="75dp"
        android:contentDescription="@string/task_priority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextTaskDescription"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextUserID"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/assigned_to_userid"
        android:inputType="number"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerDeadline"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/colorWhite"
        android:text="@string/add_task"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserID" />

    <Spinner
        android:id="@+id/spinnerStatus"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextTaskDescription"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextDepartmentID"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/department_id"
        android:inputType="number"
        android:textColorHint="#1A237E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewStatusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/status"
        android:textColor="#3E2723"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextTaskDescription" />

    <TextView
        android:id="@+id/textViewPriorityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_priority"
        android:textColor="#1A237E"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerPriority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextTaskDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>